# vote2world

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
checkpoints/: README.md
configs/analysis/: proxy_quality.yaml
configs/grpo/: smoke_test.yaml
configs/vote2world/: action_schema.json
data/: README.md
docs/: DoR_method.md  论文写作操作流_SOP.md
docs/engineering/: workspace.md
docs/experiments/: EXPERIMENTS.md  _TEMPLATE.md  exp_codereward_multiseed_20260616.md  grpo_train_results_20260615.md  roadmap.md
docs/research/: Codex_RT1_Input_Audit_Task.md  Vote2World_GT_Free_Self_Consensus_RL_Plan.md
extended_abstract/: MultiLevelConsistency_ExtendedAbstruct.docx  MultiLevelConsistency_fig1.drawio
outputs/: README.md
reports/: vote2world_action_schema_audit.md  vote2world_input_pipeline_report.md
reports/rt1_input_audit/: README.md  audit_summary.md  rlvr_world_input_pipeline.md  rt1_action_schema.md  rt1_action_statistics.md  rt1_npz_audit.md  rt1_tfrecord_audit.json
scripts/: analyze_consensus.py  cache_candidates.py  diagnose_consensus.py  probe_phi_dino.py  probe_phi_latent.py  probe_tokenizer_floor.py  smoke_test.py  train_grpo.py
scripts/analysis/: render_rt1_input_audit_reports.py
scripts/download/: download_rt1_https.py
scripts/figures/: export_frames.py  plot_curves.py  plot_method.py
scripts/rt1/: analyze_rt1_action_statistics.py  audit_rt1_action_schema.py  convert_rt1_tfrecord_to_npz_stdlib.py  (+1 more)
tests/: test_action_schema.py  test_adaptation_processor.py  test_no_future_gt_leakage.py  test_no_gt_contract.py  test_window_datasets.py
(+28 files in other folders)
