[project]
name = "vote2world"
version = "0.1.0"
description = "GT-free self-consensus RL workspace for action-conditioned visual world models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

