[project]
name = "dor"
version = "0.2.0"
description = "Consensus-shaped advantage estimation for verifiable world-model RL (RLVR-World + RT-1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
